--- a/package.json
+++ b/package.json
@@ -11,29 +11,41 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.21.1",
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
 		"http-status-codes": "^2.1.4",
+		"knex": "^0.95.7",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
-		"typescript": "^4.1.2",
+		"sqlite3": "^5.0.2",
+		"typescript": "^4.3.5",
 		"uuid": "^8.3.2",
 		"web-vitals": "^1.0.1"
 	},
 	"devDependencies": {
 		"@types/axios": "^0.14.0",
+		"@types/express": "^4.17.13",
 		"@types/jest": "^26.0.15",
+		"@types/knex": "^0.16.1",
 		"@types/node": "^12.0.0",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
 		"@types/react-router-dom": "^5.1.8",
-		"@types/uuid": "^8.3.1"
+		"@types/sqlite3": "^3.1.7",
+		"@types/uuid": "^8.3.1",
+		"ts-node": "^10.1.0"
 	},
 	"scripts": {
+		"clean": "rm -rf dist",
+		"server-build": "yarn clean && yarn tsc",
+		"server-start": "yarn ts-node backend/server.ts",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"typecheck": "tsc --noEmit"
 	},
 	"eslintConfig": {
 		"extends": [
