--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.21.1",
+		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"http-status-codes": "^2.1.4",
@@ -26,6 +27,7 @@
 	},
 	"devDependencies": {
 		"@types/axios": "^0.14.0",
+		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/jest": "^26.0.15",
 		"@types/knex": "^0.16.1",
@@ -40,7 +42,7 @@
 	"scripts": {
 		"clean": "rm -rf dist",
 		"server-build": "yarn clean && yarn tsc",
-		"server-start": "yarn ts-node backend/server.ts",
+		"server-start": "yarn ts-node src/backend/server.ts",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
